Vaadin 24 compatibility and some Java 17 goodness